<resources>
    <string name="app_name">BhaktiVedantDietApp</string>
    <string name="login_id">login_id</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="username">Username</string>
    <string name="hint_password">Password</string>
    <string name="tv_ward">TextView</string>
    <string name="ward">ward</string>
    <string name="textview">TextView</string>
    <string name="dd">DD</string>
    <string name="sub_diet">Sub Diet</string>
    <string name="basic_diet">Basic Diet:</string>
    <string name="provisional_diagno">Provisional Diagno</string>
    <string name="age">Age:</string>
    <string name="patient_name">Patient Name </string>
    <string name="bed_no">Bed No. </string>
    <string name="srd">SRD</string>
    <string name="rd">rd</string>
    <string name="salt_free">salt_free</string>
    <string name="hpd">HPD</string>
    <string name="lpd">LPD</string>
    <string name="bland">BLAND</string>
    <string name="fat_free">Fat-Free</string>
    <string name="colddiet">ColdDiet</string>
    <string name="add_diet_remark">Add. Diet Remark</string>
    <string name="update">Update</string>
    <string name="last_updated_by">Last Updated By:</string>

    <string-array name="basic_diet_arrays">
        <item>Clear Liquid</item>
        <item>Full Diet</item>
        <item>JTF</item>
        <item>Liquid</item>
        <item>Nil By Mouth</item>
        <item>Percute Gast Diet</item>
        <item>RT Feed</item>
        <item>Semi Solid</item>
        <item>Soft</item>
    </string-array>

    <string-array name="meal_time_array">
        <item>All</item>
        <item>Morning</item>
        <item>Afternoon</item>
        <item>Evening</item>
        <item>Night</item>
    </string-array>

    <string-array name="meal_item_array">
        <item>Chai</item>
        <item>Lassi</item>
        <item>Roti</item>
        <item>Khichdi</item>
        <item>Dahi</item>
        <item>Dal</item>
        <item>Soup</item>
        <item>Biscuits</item>
        <item>Thsli</item>
        <item>Rice</item>
        <item>Juice</item>
        <item>Other</item>
    </string-array>

    <string-array name="meal_quantity_array">
        <item>One</item>
        <item>Half</item>
        <item>Two</item>
        <item>One and Half</item>
    </string-array>

</resources>
